# stir

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.forgejo/actions/build-plugin/: action.yaml
.forgejo/actions/check-changes/: action.yaml
.forgejo/actions/package-plugin/: action.yaml
.forgejo/actions/run-clang-format/: action.yaml
.forgejo/actions/run-gersemi/: action.yaml
.forgejo/workflows/: build-project.yaml  check-format.yaml  pr-pull.yaml  push.yaml
.github/ISSUE_TEMPLATE/: stir-world-addition.yml  stir-world-removal.yml  stir-world-submission.md
.github/actions/build-plugin/: action.yaml
.github/actions/check-changes/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/workflows/: build-project.yaml  check-format.yaml  dispatch.yaml  pr-pull.yaml  push.yaml  wiki.yaml
cmake/common/: buildnumber.cmake  helpers_common.cmake
src/: chain.c  chain.h  init.c  init.h  plugin-main.c  plugin-support.c.in  plugin-support.h  stir-context.c  stir-context.h  stir-lowpass.c  stir-lowpass.h  stir-router.c  stir-router.h  struct.h  util.c  util.h
src/filters/: common.c  common.h  stir-echo.c  stir-echo.h  stir-gain.c  stir-gain.h  stir-highpass.c  stir-highpass.h  stir-lowpass.c  stir-lowpass.h  stir-router.c  stir-router.h  stir-tremolo.c  stir-tremolo.h  stir-vibrato.c  stir-vibrato.h
wiki/: Extra.Steam-Audio.md  Extra.Testing-Worlds.md  Filters.Echo.md  Filters.Gain.md  Filters.Highpass.md  Filters.Lowpass.md  Filters.Router.md  Filters.Tremolo.md  Getting-Started.md  Home.md  Player-Presets.ProTV.md  Usage.Post-Setup.md  Usage.Setup.md  VRChat.CDNs.md  VRChat.ProTV-Preset.md  VRChat.Steam-Audio.md  VRChat.Testing-Worlds.md  VRChat.Video-Player-Presets.md  VRChat.World-Usage.md  _Sidebar.md
wiki.old/: Player-Presets.ProTV.md  Unity.Setup.md  Usage.Post-Setup.md  Usage.Setup.md
(+2 files in other folders)
